[package]
edition = "2021"
name = "examples"
version = "0.1.0"
authors = ["pausala"]
readme = "README.md"
license = "MIT"

[dev-dependencies]
fft_analizer = { version = "0.1.0", path = "../fft_analizer" }
audio_streams = { version = "0.1.0", path = "../audio_streams" }


[[example]]
name = "two_moving_centers"
path = "two_moving/two_moving_centers.rs"

[dependencies]
nannou = "0.19.0"
nannou_audio = "0.19.0"
rand = "0.8.5"
ringbuf = "0.4.1"
