[package]
edition = "2021"
name = "examples"
version = "0.1.0"
authors = ["pausala"]
readme = "README.md"
license = "MIT"

[dev-dependencies]
fft_analizer = { version = "0.1.0", path = "../fft_analizer" }
audio_streams = { version = "0.1.0", path = "../audio_streams" }


[[example]]
name = "timeline"
path = "timeline/timeline.rs"

[dependencies]
nannou = "0.19.0"
nannou_audio = "0.19.0"
rand = "0.8.5"
ringbuf = "0.4.1"
